Using httpbin instead of mocks
Thanks to @roberto for the tip.
closes #2

--- a/tests/data/mailto.html
+++ b/tests/data/mailto.html
@@ -6,7 +6,8 @@
 </head>
 <body>
   <div id="wrap">
-  	<p><a href="http://renatacarreira.com">About page</a> and <a href="https://github.com/recarreira">github profile</a>. Get in touch at <a href="mailto:contato@renatacarreira.com">contato@renatacarreira.com</a></p>
+  	<p><a href="http://httpbin.org/status/200">Valid link</a>.
+  	Get in touch at <a href="mailto:contato@renatacarreira.com">contato@renatacarreira.com</a></p>
   </div>
 </body>
 </html>
