--- a/tests/data/simple.html
+++ b/tests/data/simple.html
@@ -2,11 +2,11 @@
 
 <html lang="en">
 <head>
-  <title>Renata Carreira</title>
+  <title>Saving Zelda</title>
 </head>
 <body>
   <div id="wrap">
-  	<p><a href="http://renatacarreira.com">About page</a> and <a href="https://github.com/recarreira">github profile</a></p>
+  	<p><a href="http://httpbin.org/status/200">Ok link</a> and <a href="http://httpbin.org/status/404">Broken link</a></p>
   </div>
 </body>
 </html>
