--- a/tests/data/whatever.html
+++ b/tests/data/whatever.html
@@ -2,11 +2,11 @@
 
 <html lang="en">
 <head>
-  <title>Renata Carreira</title>
+  <title>Saving Zelda</title>
 </head>
 <body>
   <div id="wrap">
-  	<p><a href="#">lots</a> <a href="javascript:;">of</a> <a href="">invalid</a> <a href="#okay">links</a> . But this one is <a href="http://renatacarreira.com">valid</a>.</p>
+  	<p><a href="#">lots</a> <a href="javascript:;">of</a> <a href="">invalid</a> <a href="#okay">links</a> . But this one is <a href="http://httpbin.org/status/200">valid</a>.</p>
   </div>
 </body>
 </html>
